# piggy-lite-challenge

./: .gitignore  CHALLENGE.md  README.md  REFLECTION.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: crud.py  main.py  models.py  schemas.py  seed.py  seed_data.py
backend/app/api/: deps.py
backend/app/api/routes/: dependants.py  e2e.py
backend/app/core/: config.py  db.py
backend/app/services/: transfer_service.py
backend/tests/: conftest.py  test_auth.py  test_e2e_seed.py  test_transfer_flow.py
frontend/: .dockerignore  .env.local.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: money.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthGuard.tsx  Button.tsx  DashboardClient.tsx  DependantDetailClient.tsx  FundButton.tsx  Header.tsx  LanguageSwitcher.tsx  Modal.tsx  Money.tsx  SpendButton.tsx  TransactionList.tsx  TransferForm.tsx
frontend/e2e/tests/: login.spec.ts
frontend/hooks/: useAuthenticatedAPI.ts  useDependants.ts
frontend/i18n/: config.ts  request.ts
frontend/i18n/locales/: en.json  es.json
frontend/lib/: auth.ts  money.ts  types.ts
(+1 files in other folders)
